add nginx user description (#1072)
* Update web.md
* Update deploy.md